# KeystrokeSimulator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.MD  CLAUDE.md  MANUAL.md  PROJECT.md  README.md  _build.py  _keytest.py  _lambda.py  _local_test.py  _local_test_server.py  _packcode_output.txt  _timestamp.py  _update_sound.py  _warrior  build_secure.cmd  build_secure.command  diff.txt  i18n.py  keystroke_capturer.py  keystroke_engine.py  keystroke_event_editor.py  keystroke_event_graph.py  keystroke_event_importer.py  keystroke_models.py  keystroke_modkeys.py  keystroke_processor.py  keystroke_processors.py  keystroke_profile_storage.py  keystroke_profiles.py  keystroke_quick_event_editor.py  keystroke_settings.py  keystroke_simulator_app.py  keystroke_simulator_app_v2.py  keystroke_sort_events.py  keystroke_sounds.py  keystroke_utils.py  main.py  (+13 more)
.github/workflows/: verify.yml
app/: __main__.py  secure.py
app/compat/: __init__.py  legacy.py
app/core/: capturer.py  models.py  processor.py  profile_events.py  validation.py
app/storage/: profile_storage.py  settings_storage.py
app/ui/: capture_session.py  event_editor.py  event_graph.py  event_importer.py  input_listener_session.py  main_frames.py  modkeys.py  profile_event_list.py  profile_graph_viewer.py  profile_groups.py  profile_settings.py  profiles.py  quick_event_editor.py  settings.py  simulator_app.py  sort_events.py  theme.py
app/utils/: exception_hooks.py  i18n.py  keys.py  runtime_toggle.py  sounds.py  system.py  window_state.py
docs/: maintainer-reference.md  ui-redesign-proposal.md
infra/aws/auth_lambda/: handler.py
scripts/: build_secure.py  verify.py
tests/: E2E_TESTPLAN.md  helpers.py  test_capture_session.py  test_capturer.py  test_check_match.py  test_condition_and_core_logic.py  test_e2e.py  test_e2e_profile_crud.py  test_event_copy_sync.py  test_event_data_conversion.py  test_event_editor_validation.py  test_event_graph_algorithms.py  test_exception_hooks.py  test_extract_roi_and_capture.py  test_import_conventions.py  test_input_listener_session.py  test_invert_condition_chain.py  test_keystroke_settings.py  test_keystroke_simulator_app_flow.py  test_keystroke_sounds.py  test_keystroke_utils.py  test_legacy_compat.py  test_main_secure.py  test_processor_key_execution.py  test_profile_display.py  test_profile_json_storage.py  test_profile_storage_ops.py  test_profiles_logic.py  test_quick_event_editor.py  test_resolve_effective_states.py  test_settings_storage.py  test_simulator_event_name_validation.py  test_sort_window_ui.py  test_window_state_restore.py
