[project]
name = "keystroke-simulator"
version = "3.0.0"
description = "Tkinter desktop automation app that watches screen regions and replays keystrokes."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "loguru==0.7.3",
    "mss==10.1.0",
    "pillow==12.0.0",
    "pynput==1.8.1",
    "pywin32==311; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa==11.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==11.1; sys_platform == 'darwin'",
    "miniaudio==1.71",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pyright==1.1.409",
    "ruff==0.15.14",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "B",
    "RUF012",
]

[tool.pyright]
include = [
    "app",
    "scripts",
    "tests",
]
exclude = [
    ".venv",
    "__pycache__",
]
pythonVersion = "3.13"
typeCheckingMode = "off"
reportMissingModuleSource = "none"
strict = [
    "app",
    "scripts/verify.py",
]
