[project]
name = "keystroke-simulator"
version = "3.0.0"
description = "Tkinter desktop automation app that watches screen regions and replays keystrokes."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "loguru==0.7.3",
    "mss==10.1.0",
    "pillow==12.3.0",
    "pynput==1.8.2",
    "pywin32==312; sys_platform == 'win32'",
    "pyobjc-framework-Cocoa==12.2.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==12.2.1; sys_platform == 'darwin'",
    "miniaudio==1.71",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pyright==1.1.411",
    "ruff==0.15.22",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'darwin'",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "B",
    "RUF012",
]

[tool.pyright]
include = [
    "app",
    "scripts",
    "tests",
]
exclude = [
    ".venv",
    "__pycache__",
]
pythonVersion = "3.14"
typeCheckingMode = "off"
reportMissingModuleSource = "none"
strict = [
    "app",
    "scripts/verify.py",
]
